[package]
name = "grinrelay"
version = "1.0.2"
authors = ["vault713 devs and giggle devs"]
edition = "2018"
description = "A slate relay service for Grin."
keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency", "giggle", "vault713" ]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
bytes = "0.4"
clap = "2.31"
colored = "1.6"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
log = "0.4"
nitox = "0.1"
nom = "4.2"
rustc-serialize = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
tokio = "0.1"
tokio-codec = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
toml = "0.4"
unicode-segmentation = "0.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
ws = { version="0.8", features=["ssl"] }

grinrelaylib = { path = "./grinrelaylib" }
