[package]
name = "grinrelaylib"
version = "1.0.6"
authors = ["vault713 devs and giggle devs"]
edition = "2018"
description = "A library that encapsulates grinrelay integration."
keywords = [ "grinrelay", "grinwallet", "grin", "mimblewimble", "rust", "crypto", "cryptocurrency", "giggle" ]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
colored = "1.7"
failure = "0.1"
hex = "0.3"
log = "0.4"
lazy_static = "1"
openssl = "0.10"
parking_lot = {version = "0.6"}
rand = "0.5"
regex = "1"
ring = "0.13"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7"
ws = { version="0.8", features=["ssl"] }

grin_secp256k1zkp = { version = "0.7.7", features = ["bullet-proof-sizing"]}
grin_wallet_libwallet = { git = "https://github.com/mimblewimble/grin-wallet", tag = "v2.0.0" }
